# self_storage_trepp

./: .gitignore  README.md  index.html  la_self_storage_map_2016.html  la_self_storage_map_2019.html  la_self_storage_map_2022.html  la_self_storage_map_2025.html  profile_bv_hollywood_storage.html  profile_cypress_mini_storage.html  profile_lockaway_ss___hollywood.html  profile_socal_torrance.html  profile_storage_center_of_valencia.html  profile_storage_etc___torrance_ca.html  profile_storage_express___palmdale_ca.html  profile_storbox_self_storage.html  property_profiles.html  pyproject.toml
docs/: AI_GUIDE.md  LA_SELF_STORAGE_REPORT.md
output/: la_self_storage_map.html  profile_bv_hollywood_storage.html  profile_cypress_mini_storage.html  profile_lockaway_ss___hollywood.html  profile_socal_torrance.html  profile_storage_center_of_valencia.html  profile_storage_etc___torrance_ca.html  profile_storage_express___palmdale_ca.html  profile_storbox_self_storage.html  site_predictions.csv
scripts/: data_exploration.py  demand_analysis.py  generate_property_pages.py  generate_report_figures.py  la_deep_dive.py
src/: __init__.py  config.py  snowflake_io.py
